--- a/girassolboutique/css/index.css
+++ b/girassolboutique/css/index.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Clicker+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Delius+Swash+Caps&display=swap');
 /* CSS Document */
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -44,25 +45,27 @@ header {
     width: 100%;
 	height: 153px;
     background-color: #ff0066;
+    display: grid;
+}
+.logo {
+	
+	margin: 0 auto;
+	padding: 12.3px;
 }
 
-.bl_logo {
-    /* Change this value to customize the content area*/
-	height: 153px;
-	margin: auto;
-}
-
-a .bl_imagem {
-	float: left;
+.bl_nav {
 	position: absolute;
-  left: 550px;
-  top: 13px;
-  width: 125px;
-  height: 128px;
-  z-index: 42;
+	width: 94%;
+	height: inherit;
+	box-sizing: border-box;
 }
 
-a .bl_nome {
-	float: left;
-	position: absolute;
+.bl_nav li {
+	float: right;
+	padding: 65px 2px;
+	font-family: 'Delius Swash Caps', cursive;
+  font-size: 1.3em;
+  color: rgb(255, 249, 95);
+  line-height: 1.037;
+  text-align: center;
 }
