--- a/girassolboutique/css/index.css
+++ b/girassolboutique/css/index.css
@@ -106,12 +106,8 @@ header {
   -webkit-transform: scale(0.94, 1.03);
 }
 
-@media (max-width: 691px){
-  .ct_principal_textos h3 {
-    font-size: 6vw;
-    line-height: 1.5;
-  }  
-}
+
+
 @media (max-width: 1344px){
   .ct_principal img {
   height: auto;
@@ -161,11 +157,61 @@ header {
   width: 100%;
   height: auto;
   float: right;
-  display: grid;
+  display: flex;
+  }  
 }
 
+@media (max-width: 691px){
+  .ct_principal {
+    display: grid;
+    float: none;
+  }
   
+  .ct_principal picture {
+    order: 2;
+  }
   
-  
+  .ct_principal_textos {
+    order: 1;
+    width: 100%;
+    height: 28vw;
+    float: left;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .ct_principal_textos h3 {
+    margin: auto;
+  }  
+  .ct_principal_texto1 {
+  font-size: 31px;
+  font-family: "Cabin Condensed";
+  color: rgb(222, 222, 222);
+  font-weight: bold;
+  line-height: 1.284;
+  text-align: center;
+  text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.13);
 }
+
+  .ct_principal_texto2 {
+  font-size: 37px;
+  font-family: "Cabin Condensed";
+  color: rgb(222, 222, 222);
+  /*! font-weight: bold; */
+  line-height: 0.86;
+  text-align: center;
+  text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.13);
+}
+
+  .ct_principal_texto3 {
+  font-size: 20px;
+  font-family: "Cabin Condensed";
+  color: rgb(222, 222, 222);
+  font-weight: bold;
+  line-height: 2.527;
+  text-align: center;
+  text-shadow: 0px 4px 2px rgba(0, 0, 0, 0.13);
+  width: 89vw;
+  box-sizing: border-box;
+}
+
 }
