--- a/girassolboutique/css/index.css
+++ b/girassolboutique/css/index.css
@@ -50,6 +50,9 @@ header {
 	padding: 75px;
 }
 
+.ct_principal picture {
+  cursor: pointer;
+}
 .ct_vestidos {
   background-color: #ff0066;
 	height: 650px;
@@ -132,19 +135,20 @@ header {
 
 #looks_grid {
   /* Prevent vertical gaps */
-  line-height: 0;
    
   -webkit-column-count: 5;
   -webkit-column-gap:   0px;
   -moz-column-count:    5;
   -moz-column-gap:      0px;
-  column-count:         2;
+  column-count:         3;
+  line-height: 3;
 }
 
 #looks_grid img {
   /* Just in case there are inline attributes */
   width: 100% !important;
   height: auto !important;
+  cursor: pointer;
 }
 
 
