ct_looks_responsive v3

--- a/girassolboutique/css/index.css
+++ b/girassolboutique/css/index.css
@@ -162,8 +162,10 @@ header {
   -moz-transform: scale(0.94, 1.03);
   -webkit-transform: scale(0.94, 1.03);
   -ms-transform: scale(0.94, 1.03);
-  margin: -31px 1px;
+  margin: -34px 4px;
   background-color: grey;
+  line-height: 1.3;
+  padding: 9px 0;
 }
 
 .looks_grid h5 {
@@ -174,11 +176,14 @@ header {
   -moz-transform: scale(0.94, 1.03);
   -webkit-transform: scale(0.94, 1.03);
   -ms-transform: scale(0.94, 1.03);
-  margin: 16px 111px;
+  margin: 31px 111px 22px;
   background-color: black;
+  line-height: 2.1;
 }
 
-
+.looks_grid div {
+    margin: 7px;
+}
 
 
 
@@ -249,7 +254,7 @@ header {
   
   .looks_grid div h4 {
   font-size: 20px;
-  margin: -33px auto;
+  margin: -21px auto;
   }
 
 .looks_grid h5 {
@@ -329,7 +334,7 @@ header {
 }
 .looks_grid div h4 {
   font-size: 4vw;
-  margin: -33px 0px;
+  margin: -29px 0px;
   }
 
 .looks_grid h5 {
