--- a/girassolboutique/css/reset.css
+++ b/girassolboutique/css/reset.css
@@ -17,6 +17,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 body {
 	line-height: 1;
+	background: #222;
 }
 
 ol, ul {
