--- a/girassolboutique/css/index.css
+++ b/girassolboutique/css/index.css
@@ -185,6 +185,25 @@ header {
     margin: 7px;
 }
 
+footer {
+  width: 100%;
+  height: 108px;
+  background-color: #222;
+  margin: 72px auto 0 auto;
+  display: grid;
+}
+
+footer h5 {
+  
+  margin: auto;
+  color: #ddd;
+  font-size: 1.7vw;
+}
+
+
+
+
+
 
 
 
