--- a/girassolboutique/css/index.css
+++ b/girassolboutique/css/index.css
@@ -187,7 +187,7 @@ header {
 
 footer {
   width: 100%;
-  height: 108px;
+  height: 145px;
   background-color: #222;
   margin: 72px auto 0 auto;
   display: grid;
@@ -196,11 +196,39 @@ footer {
 footer h5 {
   
   margin: auto;
-  color: #ddd;
-  font-size: 1.7vw;
+  color: #ccc;
+  font-size: 1.5em;
+  font-family: "Cabin Condensed";
+  font-weight: bold;
+  line-height: 2.527;
+  text-align: center;
 }
 
+.icons {
+  margin: auto;
+  display: flex;
+  line-height: 2.527;
+}
 
+.icons i {
+  width: 32px;
+  height: 32px;
+  display: block;
+  background-repeat: round;
+  cursor: pointer;
+  margin: -39px 5px;
+}
+
+.icons .facebook{
+  background-image: url("../img/icons/facebook.svg");
+  filter: invert(0.8);
+}
+
+.instagram {
+  background-image: url("../img/icons/instagram.svg");
+  margin: auto;
+  filter: invert(0.8);
+}
 
 
 
