--- a/girassolboutique/css/index.css
+++ b/girassolboutique/css/index.css
@@ -187,12 +187,24 @@ header {
 
 footer {
   width: 100%;
-  height: 145px;
+  height: 139px;
   background-color: #222;
-  margin: 72px auto 0 auto;
-  display: grid;
+
+  margin: 73px auto auto auto;
+  display: flex;
 }
 
+.footer_1 {
+    width: 100%;
+  height: inherit;
+  display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.footer_2 {
+  display: none;
+}
 footer h5 {
   
   margin: auto;
@@ -207,7 +219,6 @@ footer h5 {
 .icons {
   margin: auto;
   display: flex;
-  line-height: 2.527;
 }
 
 .icons i {
@@ -324,6 +335,13 @@ footer h5 {
 
 
 @media (max-width: 691px){
+  header {
+    height: auto;
+  }
+  
+  .logo {
+    height: 96px;
+  }
   .ct_principal {
     display: grid;
     float: none;
@@ -331,6 +349,7 @@ footer h5 {
   }
   
   .ct_principal picture {
+  margin: -60px auto auto auto;
   }
   
   .ct_principal_textos {
@@ -388,12 +407,53 @@ footer h5 {
   font-size: 3vw;
   margin: 28px 28px;
 }
+  
+  .bl_nav {
+    display: none;
+  }
+  
+  
+  
+  footer {
+    width: 100%;
+  height: 42vw;
+  background-color: #222;
 
+  margin: 73px auto auto auto;
+  display: flex; 
+  }
   
+  footer h5 {
   
+  margin: auto auto -5vw auto;
+  color: #ccc;
+  font-size: 5vw;
+  font-family: "Cabin Condensed";
+  font-weight: bold;
+  line-height: 2.527;
+  text-align: center;
+}
   
+  .footer_2 {
+    display: grid;
+    margin: auto;
+    color: #ccc;
+    width: 70%;
+  } 
   
-  
+  .footer_2 li {
+    margin: auto;
+    color: #ccc;
+    font-size: 5vw;
+    font-family: "Cabin Condensed";
+    font-weight: normal;
+    line-height: 1.427;
+    text-align: left;
+    min-width: max-content;
+    padding: 0vw 3vw;
+    cursor: pointer;
+       
+  }
   
 }
 
