--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,9 @@ body {
             justify-content: center;
             align-items: center;
             height: 200px;
+            width: 100%;
+            text-align: center;
+            flex-wrap: wrap;
         }
         
         .cronograma {
@@ -29,6 +32,8 @@ body {
 		color: #e8e6e3;
 		font-size: 48px;
 		}
+
+
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen 
@@ -53,7 +58,10 @@ body {
     font-size: inherit+2px;
 }
 
-
+    .links a:hover {
+        color: #e40383;
+        scale: 105%;
+    }
 
 
 
