--- a/javascript_tools/css/main.css
+++ b/javascript_tools/css/main.css
@@ -16,7 +16,6 @@ html {
   font-size: 1em;
   line-height: 1.4;
 }
-
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
@@ -261,3 +260,6 @@ textarea {
   }
 }
 
+.bloco {
+  margin: 35px;
+}
