--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,6 +1,6 @@
 header {
     position: relative;
-    height: 78px;
+    height: 72px;
     background: #333333;
     box-shadow: 0px -1px 11px rgba(0, 0, 0, 0.75);
     display: flex !important;
@@ -10,6 +10,7 @@ header {
 
 .header_logo {
     display: flex;
+    padding: 24px;
     font-family: Buenard;
     font-style: bold;
     font-weight: bold;
