--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,12 @@
-body {
+html, body {
     background-color: #333333;
+    color: #E5E5E5;
+    font-family: 'Buenard', serif;
+    height: 100%;
+}
+
+#app {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
