--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -23,3 +23,11 @@ footer h1 { /* Copyright Text */
 .socialIcons {
     height: 32px;
 }
+
+.socialIcons ul {
+    display: flex;
+}
+
+.socialIcons li:hover {
+    zoom: 106%;
+}
